--- a/angular.json
+++ b/angular.json
@@ -89,7 +89,11 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/_redirects"
+              "src/_redirects",
+              {"glob":"_redirects",
+              "input": "src",
+            "output":"/"}
+
             ],
             "styles": [
               "src/styles.css"
