--- a/angular.json
+++ b/angular.json
@@ -89,11 +89,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/_redirects",
-              {"glob":"_redirects",
-              "input": "src",
-            "output":"/"}
-
+              "src/_redirects"
             ],
             "styles": [
               "src/styles.css"
